feature: add plane, json and yaml output format (#9)
Co-authored-by: ramil-khamatyarov <ramil.hamatyarov@yandex.ru>